Bug 144494 - Resizing image causes hang (see comment 2)
Summary: Resizing image causes hang (see comment 2)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, haveBacktrace, regression
: 151833 (view as bug list)
Depends on:
Blocks: Performance
  Show dependency treegraph
 
Reported: 2021-09-14 13:41 UTC by Buovjaga
Modified: 2023-05-30 13:23 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Perf flamegraph (920.28 KB, image/svg+xml)
2021-09-14 13:41 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2021-09-14 13:41:01 UTC
Created attachment 175021 [details]
Perf flamegraph

1. Open attachment 163568 [details] from bug 135929
2. Resize the smiley image by dragging from the bottom right corner to the right edge of the page
3. The image moves to second page, repeat step 2

Bibisected with linux-64-7.1 to
https://git.libreoffice.org/core/commit/b9ef71476fd70bc13f50ebe80390e0730d1b7afb
tdf#134298 sw: layout: remove left-over page frame without content

Adding Cc: to Michael Stahl

Not sure, if it is a regression as such or uncovering something
Comment 1 Roman Kuznetsov 2021-09-15 22:00:19 UTC
>1. Open attachment 163568 [details] from bug 135929

Are you sure it's a right document? I don't see any "smiley image" there
Comment 2 Buovjaga 2021-09-16 07:19:58 UTC
Argh, I had the bug right, but somehow had a copy & paste error for the attachment. The right one is attachment 164476 [details].
Comment 3 Roman Kuznetsov 2021-09-18 12:41:06 UTC
Confirm with attach from Comment 2 in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c5aef25352d20e052ec3a697f3cb979d3bbf9df6
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: default; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2023-05-11 18:18:46 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c8cb7a658b33e296024044f3377378644a9a97ef

tdf#144494 sw: fix layout loop

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2023-05-12 03:51:06 UTC
No hang in
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c8cb7a658b33e296024044f3377378644a9a97ef
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 Michael Stahl 2023-05-12 10:08:53 UTC
fixed on master
Comment 7 Commit Notification 2023-05-17 12:01:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/5af29292af4564357b18610467d69ac35ad8271c

tdf#144494 sw: fix layout loop

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gabor Kelemen (Collabora) 2023-05-29 18:30:15 UTC
*** Bug 151833 has been marked as a duplicate of this bug. ***