sw/source/core/layout/flowfrm.cxx
@@ -2142,7 +2142,7 @@ bool SwFlowFrame::MoveFwd( bool bMakePage, bool bPageBreak, bool bMoveAlways )
             // i#106452
             // check page description not only in situation with sections.
             if ( !bSamePage &&
-                 ( m_rThis.GetPageDescItem().GetPageDesc() ||
+                 ((!IsFollow() && m_rThis.GetPageDescItem().GetPageDesc()) ||
                    pOldPage->GetPageDesc()->GetFollow() != pNewPage->GetPageDesc() ) )
             {
                 SwFrame::CheckPageDescs( pNewPage, false );
